--- a/src/assets/forms/rekyc/var.css
+++ b/src/assets/forms/rekyc/var.css
@@ -9,27 +9,27 @@ p {
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 26px;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 24px;
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 22px;
 }
 
 h4 {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 h5 {
-  font-size: 12px;
+  font-size: 18px;
 }
 
 h6 {
-  font-size: 10px;
+  font-size: 16px;
 }
 
 .form-section {
